<?xml version="1.0"?>
<package>
  <name>ros_mavlink</name>
  <version>0.0.0</version>
  <description>The ros_mavlink package</description>
  <maintainer email="rowoflo@gmail.com">Rowland O'Flaherty</maintainer>

  <license>BSD</license>
  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>utility</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>utility</run_depend>
</package>
